@@ -23,7 +23,7 @@ from grokcore.component.components import Adapter, GlobalUtility, MultiAdapter, 
 from martian import baseclass
 from grokcore.component.directive import (
     context, name, title, description, provides, global_utility, direct)
-from grokcore.component.decorators import subscribe, adapter, implementer
+from grokcore.component.decorators import subscribe, adapter, implementer, provider
 from martian.error import GrokError, GrokImportError
 
 # Import this module so that it's available as soon as you import the
